@@ -89,6 +89,9 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
     - Let the controller specify HOP=%d as an argument to ATTACHSTREAM,
       so we can exit from the middle of the circuit.
     - Implement "getinfo status/circuit-established".
+    - Implement "getinfo status/version/..." so a controller can tell whether
+      the current version is recommended, and whether any versions are good,
+      and how many authorities agree.  (Patch from shibz.)
 
   o Minor features (other):
     - Correctly report Windows 95 OSR2 and Windows 98 SE.
